build/deployment/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: liberty-rest
    app.kubernetes.io/part-of: liberty
  name: liberty-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: liberty-rest
  template:
    metadata:
      labels:
        app: liberty-rest
    spec:
      containers:
      - name: liberty-rest
        image: image-registry.openshift-image-registry.svc:5000/liberty-rest/liberty-rest-app
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
          name: http
          protocol: TCP
