build/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: liberty-rest
  labels:
    app: liberty-rest
spec:
  ports:
  - name: http
    port: 9080
  selector:
    app: liberty-rest
