build/deployment/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  labels:
    app: liberty-rest
  name: liberty-rest-route
spec:
  to:
    kind: Service
    name: liberty-rest
